- Fixed attribute value on Person component. - Fixed spacing issue on home screen.

--- a/src/containers/Home/Home.css
+++ b/src/containers/Home/Home.css
@@ -57,6 +57,10 @@
 }
 
 @media only screen and (max-width: 750px) {
+  .content {
+    margin-top: 50px;
+  }
+  
   .content-inner {
     flex-direction: column;
   }
@@ -66,7 +70,7 @@
   }
 
   .content-right {
-    margin-top: 40px;
+    margin-top: 15px;
     width: 300px;
   }
 }
